--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -98,7 +98,7 @@ frequency as a function of time \cite{JockelMR}. The effect of this
 dependence on the mechanical object's final temperature was studied in
 \cite{BarberisLC}. In that study it was found that the final
 temperature of the parametrically driven harmonic oscillator was
-larger than the nondriven case. However, the master equation from
+larger than the non-driven case. However, the master equation from
 which the cooling rates were derived accounted for the natural
 frequency of the mechanical resonator via ad-hoc time-dependent
 coefficients that were introduced after performing the Markov
@@ -179,7 +179,7 @@ H_{\rm mec}(t) =& \frac{p^2}{2M} + \frac{1}{2}M \nu^2 (t) x^2,\\
 H_{\rm int} =& -\hbar g a^\dagger a x,\\
 H_{\rm pump} =& \hbar\frac{\Omega}{2}(a^\dagger + a),
 \end{align}
-Where $\delta = \omega_{laser} - \omega_{cav}$, in the cavity Hamiltonian, $H_{\rm cav}$, is the frequency difference between the laser and
+where $\delta = \omega_{laser} - \omega_{cav}$, in the cavity Hamiltonian, $H_{\rm cav}$, is the frequency difference between the laser and
 the cavity; $M$, in the mechanical oscillator Hamiltonian,
 $H_{\rm mec}$, is the mechanical oscillator's mass, $p$ its momentum
 operator, $x$ its position operator, and $\nu(t)$ its frequency. The
@@ -282,7 +282,9 @@ is the master equation for a parametrically driven optomechanical
 system with an improved dissipation model which accounts for the
 mechanical oscillator's time dependent frequency.
 
-
+\fxnote{¿Vale la pena una discusion del significado de las
+  excitaciones e introducir el operador de numero aqui, o lo dejamos
+  donde esta?}
 
 \subsection{Displaced Frame}
 
@@ -331,7 +333,7 @@ $\beta(t)$ fulfill the differential equations
 
 Proceeding further requires an explicit solution for
 \eqref{TimeDependentHO} in order to calculate explicit expressions for several of the coefficients and to deal with the $\dot{\Gamma}$ and $\dot{\Gamma}^\dagger$ operators. The primes in the operators will be omitted
-from now on as all calculations will carried out in the displaced frame.
+from now on as all calculations will be carried out in the displaced frame.
 
 
 \section{Solution for Small Oscillations}\label{SolSmallOsc}
@@ -449,7 +451,7 @@ the subspace corresponding to the slowly evolving time scale and
 tracing over the cavity degrees of freedom, we arrive at the following
 master equation for the density operator $\mu$, which represents the
 mechanical degrees of freedom in the subspace corresponding to the
-steady state (see Appendix \ref{CoolingAppendix})
+steady state 
 
 \begin{equation}\label{eq:ProyectedMasterEqCooling}
 \dot{\mu} \approx \frac{1}{i\hbar}[\overline{H},\mu] + \frac{A_-}{2}D[\Gamma]\mu + \frac{A_+}{2}D[\Gamma^\dagger]\mu, 
@@ -457,35 +459,26 @@ steady state (see Appendix \ref{CoolingAppendix})
 with
 $D[\Gamma] = 2\Gamma \mu \Gamma^\dagger -\{\Gamma^\dagger \Gamma,
 \mu\}$. $A_-$ is the cooling rate and $A_+$ is the heating rate.
-<<<<<<< HEAD
-\fxnote{Creo que va en el apéndice, me abstengo de hacerlo hasta que
-  estén tus cambios} $\overline{H}$ is a term proportional to
-=======
- $\overline{H}$ is a term proportional to
->>>>>>> b4b2c45a4a705f94cd795b0d9a6c8a2734073ef1
-$\Gamma^\dagger \Gamma$ that may be neglected, as it is small when
-compared to $\nu_0 \Gamma^\dagger \Gamma$ . This equation is obtained in detail in Appendix
-\ref{CoolingAppendix}. The coefficients are the usual rates for the
-non time-dependent case plus a correction proportional to the
-adimensional parameter $C_t=\frac{\delta_t}{\nu_0}$, in Appendix
-\ref{CoolingAppendix} we require $C_t \ll 1$. The temperature at the
-end of the cooling procedure is given by
+$\overline{H}$ is a term proportional to $\Gamma^\dagger \Gamma$ that
+may be neglected, as it is small when compared to
+$\nu_0 \Gamma^\dagger \Gamma$ . This equation is obtained in detail in
+Appendix \ref{CoolingAppendix}. The coefficients $A_-$ and $A_+$are
+the usual rates for the non time-dependent case plus a correction
+proportional to the adimensional parameter
+$C_t=\frac{\delta_t}{\nu_0}$, we required in the derivation that
+$C_t \ll 1$. The temperature at the end of the cooling procedure is
+given by
 
 \begin{equation}\label{eq:TempExpression}
 \expval{m} =\langle \Gamma^\dagger \Gamma \rangle = \frac{A_+}{A_- - A_+}.
 \end{equation}
-<<<<<<< HEAD
-This is the mean number of thermal excitations for the harmonic
-=======
 This is the mean number of thermal excitations for the time-dependent harmonic
->>>>>>> b4b2c45a4a705f94cd795b0d9a6c8a2734073ef1
 oscillator. Cooling towards zero in this reference frame is in
 reality cooling towards the coherent state $\ket{\beta_1}$ in the
 laboratory frame. It's important to note that these excitations
 correspond to a harmonic oscillator with a time-dependent frequency
 and can't necessarily be directly compared with the excitations of a
 harmonic oscillator with constant frequency.
-
 
 
 \section{Calculation of Mean Vibrational Occupation Number}\label{NumCal}
@@ -518,57 +511,42 @@ A_+^t =& A_+ + A_+^c.\\
 $I_0$ and $J_1$ are the modified Bessel Function of the first kind and
 the Bessel function of the first kind, respectively. They appear in
 the cooling and heating rates as a result of averaging out the time
-dependencies for the cavity eigenvalues in Appendix
-\ref{CoolingAppendix}.
+dependencies for the cavity eigenvalues (see Appendix
+\ref{CoolingAppendix}).
 With these expressions in hand, the temperature is easily calculated.
-Everything is calculated using $\frac{\delta}{\nu_0}$ as the variable.
 
 
 \begin{figure}[h!]
 \includegraphics[scale=.5]{TempGorden1-.pdf}   
-\caption{ Mechanical oscillator phonon number with and without a time dependence. The correction results in a lower minimum temperature, as well as a lower temperature in a region around this minimum.}\label{fig:TempComparisson-}
+\caption{ Mechanical oscillator phonon number of a parametrically
+  driven mechanical oscillator (dashed) compared with a non-driven one
+  (dotted). The parametrically driven oscillator shows a smaller
+  temperature. Parameters: $\kappa = 0.05\nu_0$,
+  $\frac{C_tJ_1(C_t)}{I_0(C_t)} = 0.05$}\label{fig:TempComparisson-}
 \end{figure}
 
-<<<<<<< HEAD
-
-\fxnote{Como acordamos por telefono: agrega una figura alrededor de
-  $\delta=1$ y explica las dos figuras en el texto}
-
-For figure \ref{fig:TempComparisson},we used $\kappa = 0.05\nu_0$ and
-calculated $\expval{m}$ in the region
-$\frac{\delta}{\nu_0}\in [-2,2]$. We restrict the figures to the
-region near the temperature minimum at $\frac{\delta}{\nu_0}=-1$ The
-positive half of the region corresponds to heating of the resonator
-=======
-\begin{figure}[h!]
-\includegraphics[scale=.5]{TempGorden1+.pdf}   
-\caption{ Mechanical oscillator phonon number with and without a time dependence. The negative temperature is interpreted as heating of the resonator.}\label{fig:TempComparisson+}
-\end{figure}
-
-
-For figures \ref{fig:TempComparisson-} and \ref{fig:TempComparisson+},we used $\kappa = 0.05\nu_0$ and
-calculated $\expval{m}$ near the points $\frac{\delta}{\nu_0}=-1$ and $\frac{\delta}{\nu_0}=1$ respectively. The
-positive ratio corresponds to heating of the resonator
->>>>>>> b4b2c45a4a705f94cd795b0d9a6c8a2734073ef1
-and the negative part corresponds to cooling. We assume that the
-parameters are such that
-
+In figure \ref{fig:TempComparisson-} the temperature for the
+parametrically driven oscillator is compared with the non-driven case;
+the temperature is lower in the parametrically driven case. We used
+$\kappa = 0.05\nu_0$ and calculated $\expval{m}$ around the minimum in
+$\frac{\delta}{\nu_0}=-1$. We assume that the parameters are such that
 \begin{equation}
 \frac{C_tJ_1(C_t)}{I_0(C_t)} = 0.05,
 \end{equation}
 so that corrections proportional to higher orders in $C_t$ could be
 disregarded. As we can see in figure \ref{fig:TempRatio}, the
-corrected temperature is lower over a range around the minimum point.
+temperature for the parametrically driven oscillator is lower than the
+non-driven case over a range around the minimum point. \fxnote*{Agregue
+  esta frase, checa que sea cierto. ¿Valdra la pena aqui agregar una
+  lista de todas las aproximaciones hechas?}{As long as the parameters
+  satisfy the assumptions done in the derivation, the final
+  temperature does not depend on the driven frequency $\omega$.}
 
 It must be noted that since terms of order $\frac{\delta_t}{\delta^2}$
 are neglected, the approximation does not hold as $\delta$ approaches
-<<<<<<< HEAD
-0. The approximation is valid near $\frac{\delta}{\nu_0} = -1$ as long
-as $|\frac{\delta_t}{\nu_0}|,\frac{\delta_t}{\delta^2}\ll 1$. 
-=======
-0. The approximation is valid near $|\frac{\delta}{\nu_0}| = 1$ as long
-as $|\frac{\delta_t}{\nu_0}|,\frac{\delta_t}{\delta^2}\ll 1$.  The temperature behavior is the same around both minimums. In both cases the correction pushes the temperature closer to the limit case where the non-dominant sideband is zero, as can be seen from equation \eqref{eq:TempExpression}. 
->>>>>>> b4b2c45a4a705f94cd795b0d9a6c8a2734073ef1
+0. The approximation is valid near $|\frac{\delta}{\nu_0}| = 1$ as
+long as $|\frac{\delta_t}{\nu_0}|,\frac{\delta_t}{\delta^2}\ll 1$. 
+\eqref{eq:TempExpression}.
 
 \begin{figure}
 \includegraphics[scale=.5]{TempPropGorden1.pdf}
@@ -665,20 +643,9 @@ The left and right eigenstates are orthogonal under the product
 These states play an important part in the derivation of the master
 equation of the cavity state in the adiabatic approximation.
 
-<<<<<<< HEAD
-When there is no damping ($\kappa=0$) the left and right eigenstates reduces to 
-
-\begin{equation}
-\hat{\rho}_{n}^{j}=\Ket{n+j}\Bra{n}=\check{\rho}_{n}^{\dagger j},
-\end{equation}
-with eigenvalues
-\begin{equation}
-\lambda_l = i j \nu_0\, ,
-\end{equation}
-$\Ket{n}$ is the number state of the harmonic oscillator, $j$ is an
-integer satisfying $(n+j)>0$.
-=======
-In Appendix \ref{CoolingAppendix} we consider a harmonic oscillator with no damping, so the left and right eigenstates of the damping basis reduce to 
+In Appendix \ref{CoolingAppendix} we consider a harmonic oscillator
+with no damping, so the left and right eigenstates of the damping
+basis reduce to
 
 \begin{equation}
 \hat{\rho}_{n}^{l}=\Ket{n+l}\Bra{n}=\check{\rho}_{n}^{\dagger l},
@@ -689,15 +656,10 @@ with eigenvalues
 \end{equation}
 $\Ket{n}$ is the number state of the harmonic oscillator, $l$ is an
 integer satisfying $(n+l)>0$.
->>>>>>> b4b2c45a4a705f94cd795b0d9a6c8a2734073ef1
 
 
 \section{Laser Cooling and Projection Operators}\label{CoolingAppendix}
 
-<<<<<<< HEAD
-\fxnote{Agregar una explicacion explicita de como haces los promedios en el tiempo}
-=======
->>>>>>> b4b2c45a4a705f94cd795b0d9a6c8a2734073ef1
 
 In order to find the master equation
 \eqref{eq:ProyectedMasterEqCooling} we begin with the equation based on the Hamiltonian \eqref{LCHamiltonian}
@@ -811,20 +773,15 @@ P\dot{\rho}'(t)=P e^{-\mathcal{L}_0 t-\mathcal{L}_0^t(t)}\mathcal{L}_1[&\sum_{\l
 \begin{align}
 \lambda =& \lambda_0 + \lambda_c\frac{\delta_t}{\nu_0}\sin(\nu_0 t),\\
 \lambda' =& \lambda'_0 + \lambda'_c\frac{\delta_t}{\nu_0}\sin(\nu_0 t),
-<<<<<<< HEAD
-\end{align}
-as the time dependent part will be handled separately. $\lambda_c$
-simply refers to \fxnote*{Sigue sin entenderse, ya que no dices quien es $i$, no se si lo que quieres decir es simplemente que $\lambda_c$ es igual a los enteros, y el valor depende simplemente sobre que estado actuo el operador L}{$i$ times the value acquired by the operator
-$a^\dagger a$.} If we then set $t_0=0$ and note that
-=======
 \end{align} with
 
 \begin{equation}
 \lambda_c = ij,
-\end{equation} with $i$ the imaginary unit and $j$ the cavity quantum number. If we then set $t_0=0$ and note that
->>>>>>> b4b2c45a4a705f94cd795b0d9a6c8a2734073ef1
-$\mathcal{L}_0^t(0)=0$, we may write \eqref{ProyectionEQ}, returning
-$P$ and $Q$ to their original notation, as
+\end{equation}
+with $i$ the imaginary unit and $j$ the cavity quantum number. If we
+then set $t_0=0$ and note that $\mathcal{L}_0^t(0)=0$, we may write
+\eqref{ProyectionEQ}, returning $P$ and $Q$ to their original
+notation, as
 
 \begin{align}
 P\dot{\rho}'(t)=&\sum_{\lambda,\lambda'}[P \mathcal{L}_1Q[...]\mathcal{L}_1P\rho(0)],\\
@@ -895,9 +852,19 @@ P_m[F_\Gamma,Q_m  \mu F_\Gamma] =& \abs{\gamma}^2((\Gamma\mu\Gamma^\dagger  - \m
 \begin{equation}
 <E(\lambda)> = \frac{2\pi}{\nu_0}\int_0^\frac{2\pi}{\nu_0}dt E(\lambda) 
 \end{equation}
-
- and equation \eqref{CoolingBeforecoefficients} can then be straightforwardly arranged in the form \eqref{eq:ProyectedMasterEqCooling}. When arranging in this form, the coefficients that are obtained are complex. The real part corresponds to the cooling and heating rates and the imaginary part corresponds to a negligible correction to the mechanical frequency $\nu_0$.
-
+and equation \eqref{CoolingBeforecoefficients} can then be
+straightforwardly arranged in the form
+\eqref{eq:ProyectedMasterEqCooling}. When arranging in this form, the
+coefficients that are obtained are complex. The real part corresponds
+to the cooling and heating rates and the imaginary part corresponds to
+a negligible correction to the mechanical frequency $\nu_0$.
+\fxnote{Poner explicitamente la ecuacion de $\mu$ con $A_-$ y $A_+$ aqui, poner
+  la expresion que usaste para derivar las expresiones (44) y (45),
+  que debe ser una expresion con trazas relativamente compacta.
+  Agregar despues una pequeña discusion de como se agrega la
+  disipacion del oscilador y porque no la tomamos en cuenta en el
+  texto (en el articulo con Marc o en las notas hay una discusion de
+  eso, no me acuerdo bien en donde)}
 \bibliographystyle{unsrt}
 \bibliography{Bib}
 \end{document}
