--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -98,7 +98,7 @@ frequency as a function of time \cite{JockelMR}. The effect of this
 dependence on the mechanical object's final temperature was studied in
 \cite{BarberisLC}. In that study it was found that the final
 temperature of the parametrically driven harmonic oscillator was
-larger than the nondriven case. However, the master equation from
+larger than the non-driven case. However, the master equation from
 which the cooling rates were derived accounted for the natural
 frequency of the mechanical resonator via ad-hoc time-dependent
 coefficients that were introduced after performing the Markov
@@ -179,7 +179,7 @@ H_{\rm mec}(t) =& \frac{p^2}{2M} + \frac{1}{2}M \nu^2 (t) x^2,\\
 H_{\rm int} =& -\hbar g a^\dagger a x,\\
 H_{\rm pump} =& \hbar\frac{\Omega}{2}(a^\dagger + a),
 \end{align}
-Where $\delta = \omega_{laser} - \omega_{cav}$, in the cavity Hamiltonian, $H_{\rm cav}$, is the frequency difference between the laser and
+where $\delta = \omega_{laser} - \omega_{cav}$, in the cavity Hamiltonian, $H_{\rm cav}$, is the frequency difference between the laser and
 the cavity; $M$, in the mechanical oscillator Hamiltonian,
 $H_{\rm mec}$, is the mechanical oscillator's mass, $p$ its momentum
 operator, $x$ its position operator, and $\nu(t)$ its frequency. The
@@ -280,9 +280,9 @@ energy exchanges between the environment, and the cavity and the
 mechanical resonator respectively. Equation \eqref{LCMasterEquation}
 is the master equation for a parametrically driven optomechanical
 system with an improved dissipation model which accounts for the
-mechanical oscillator's time dependent frequency.
+mechanical oscillator's time dependent frequency. 
 
-
+\fxnote{Creo que tiene más sentido dejarlo donde está, al fin y al cabo la temperatura está medida en el marco desplazado y esto todavía no está en ese marco}
 
 \subsection{Displaced Frame}
 
@@ -305,11 +305,13 @@ cavity-mechanical system,  with
 
 \begin{equation}
 C(t)=(\beta^2-|\beta|^2)[\dot{\Gamma}^\dagger,\Gamma^\dagger]-((\beta^*)^2-|\beta|^2)[\dot{\Gamma},\Gamma],
-\end{equation} this term arises due to the explicit time dependence in the Floquet operators as they do not, in general, commute with their own time derivatives.
-The primes indicate that the transformation has been applied. The
-displaced Hamiltonian, which includes a pump-like term that appears
-due to the transformation being applied to the time derivative term,
-is
+\end{equation}
+this term arises due to the explicit time dependence in the Floquet
+operators as they do not, in general, commute with their own time
+derivatives. The primes indicate that the transformation has been
+applied. The displaced Hamiltonian, which includes a pump-like term
+that appears due to the transformation being applied to the time
+derivative term, is
 \begin{align}\label{eq:hamiltonian_no_small}
   H'=&U H U^\dagger\nonumber\\=& -\hbar \delta' a^\dagger a + \hbar\frac{W}{|f(t)|^2}\Gamma \Gamma^\dagger\nonumber\\
      &-\hbar g\sqrt{\frac{\hbar}{2M}}[(a^{\dagger}a +\alpha a^{\dagger}+\alpha^* a)(\gamma_-(t)\Gamma^{\dagger}+\gamma_+(t)\Gamma)]\nonumber\\
@@ -329,7 +331,7 @@ $\beta(t)$ fulfill the differential equations
 
 Proceeding further requires an explicit solution for
 \eqref{TimeDependentHO} in order to calculate explicit expressions for several of the coefficients and to deal with the $\dot{\Gamma}$ and $\dot{\Gamma}^\dagger$ operators. The primes in the operators will be omitted
-from now on as all calculations will carried out in the displaced frame.
+from now on as all calculations will be carried out in the displaced frame.
 
 
 \section{Solution for Small Oscillations}\label{SolSmallOsc}
@@ -388,13 +390,11 @@ With an explicit solution for \eqref{SmallOscillationsTDHO} in hand,
 we can solve Eq.~\eqref{eq:displaced_frame_2}. Assuming that the time
 scales of the dissipative processes are fast compared with the other
 time scales we can focus on the stationary case
-($\dot{\alpha}(t)=\dot{\beta}(t)=0$); we also assume a weak coupling
-regime (coefficients of second order in $g$ or higher are neglected)
-obtaining
+($\dot{\alpha}(t)=\dot{\beta}(t)=0$), resulting in
 \begin{align}\label{eq:alpha_beta_sta}
 \alpha_1 =& \frac{\Omega}{2\delta-i\kappa},& \beta_1 =\chi_0\frac{\Omega^2 e^{-i\nu_0 t}}{(\frac{\kappa^2}{4}+\delta^2)\gamma}& ,
 \end{align} where  $\chi_0 = g\sqrt{\frac{\hbar}{2M\nu_0}}$ represents the coupling.
-The  sub-index 1 denotes that the solutions are valid only to first
+The  sub-index 1 denotes that these solutions are valid only to first
 order in the coupling parameter.  In obtaining the solution we used
 \begin{equation}\label{GammaCoefficients}
 \gamma(t)_\pm= \frac{\pm 1}{2i\sqrt{\nu_0}}e^{\mp i\nu_0 t},
@@ -409,7 +409,7 @@ H =& -\hbar \delta' a^{\dagger}a +\hbar\nu_0\Gamma^{\dagger}\Gamma \\
 \begin{align}
 \delta' =& \delta +\frac{\chi_0^2 \abs{\alpha_1}^2}{\gamma} (\cos(\nu_0 t)), \nonumber\\
 =& \delta + \delta_t\cos(\nu_0 t),
-\end{align} with $\delta_t=\frac{\chi_0^2 \abs{\alpha_1}^2}{\gamma}$.  Here the correction is not neglected despite it being proportional to $\chi_0^2$ as it is also proportional to $\Omega^2$ which is large. We still require $\delta_t\ll\delta$. This correction does not go into the expression for $\alpha_1$ because when doing a Taylor expansion the first correction term would be of the order $\frac{\delta_t}{\delta^2}$ which we may safely neglect.
+\end{align} with $\delta_t=\frac{\chi_0^2 \abs{\alpha_1}^2}{\gamma}$.  We work in a weak coupling regime, so we require the coupling $\chi_0$ to be small enough so that $\delta_t\ll\delta$. As $\Omega$ is large, we may work with the second order of the coupling parameter in this expression. This correction does not go into the expression for $\alpha_1$ because when doing a Taylor expansion the first correction term would be of the order $\frac{\delta_t}{\delta^2}$ which we may safely neglect.
 We focus on the case where $|\alpha_1| \gg 1$
 \cite{BarberisLC} so that the $a^\dagger a$ term can be neglected as
 it is small when compared to the other two terms in the interaction.
@@ -447,7 +447,7 @@ the subspace corresponding to the slowly evolving time scale and
 tracing over the cavity degrees of freedom, we arrive at the following
 master equation for the density operator $\mu$, which represents the
 mechanical degrees of freedom in the subspace corresponding to the
-steady state (see Appendix \ref{CoolingAppendix})
+steady state 
 
 \begin{equation}\label{eq:ProyectedMasterEqCooling}
 \dot{\mu} \approx \frac{1}{i\hbar}[\overline{H},\mu] + \frac{A_-}{2}D[\Gamma]\mu + \frac{A_+}{2}D[\Gamma^\dagger]\mu, 
@@ -455,14 +455,15 @@ steady state (see Appendix \ref{CoolingAppendix})
 with
 $D[\Gamma] = 2\Gamma \mu \Gamma^\dagger -\{\Gamma^\dagger \Gamma,
 \mu\}$. $A_-$ is the cooling rate and $A_+$ is the heating rate.
- $\overline{H}$ is a term proportional to
-$\Gamma^\dagger \Gamma$ that may be neglected, as it is small when
-compared to $\nu_0 \Gamma^\dagger \Gamma$ . This equation is obtained in detail in Appendix
-\ref{CoolingAppendix}. The coefficients are the usual rates for the
-non time-dependent case plus a correction proportional to the
-adimensional parameter $C_t=\frac{\delta_t}{\nu_0}$, in Appendix
-\ref{CoolingAppendix} we require $C_t \ll 1$. The temperature at the
-end of the cooling procedure is given by
+$\overline{H}$ is a term proportional to $\Gamma^\dagger \Gamma$ that
+may be neglected, as it is small when compared to
+$\nu_0 \Gamma^\dagger \Gamma$ . This equation is obtained in detail in
+Appendix \ref{CoolingAppendix}. The coefficients $A_-$ and $A_+$are
+the usual rates for the non time-dependent case plus a correction
+proportional to the adimensional parameter
+$C_t=\frac{\delta_t}{\nu_0}$, we required in the derivation that
+$C_t \ll 1$. The temperature at the end of the cooling procedure is
+given by
 
 \begin{equation}\label{eq:TempExpression}
 \expval{m} =\langle \Gamma^\dagger \Gamma \rangle = \frac{A_+}{A_- - A_+}.
@@ -476,7 +477,6 @@ and can't necessarily be directly compared with the excitations of a
 harmonic oscillator with constant frequency.
 
 
-
 \section{Calculation of Mean Vibrational Occupation Number}\label{NumCal}
 
 In order to calculate the temperature, we must provide explicit expressions for the coefficients $A_\pm$ that appear in equation \eqref{eq:ProyectedMasterEqCooling}.  They are composed of the usual values for these coefficients\citep{LCNooshi}
@@ -488,7 +488,7 @@ A_+ =& a\frac{\kappa}{(\delta-\nu_0)^2+\kappa^2},
 
 \begin{equation}
 a = \hbar^2\abs{\gamma}^2\chi_0^2 I_0(C_t),
-\end{equation} plus a correction for each one, proportional to  $C_t$. These corrections are
+\end{equation} with $|\gamma|^2 = \gamma_+(t) \gamma_-(t)$ which is not time dependent at our level of approximation, plus a correction for each one, proportional to  $C_t$. These corrections are
 
 \begin{align}
 A_-^c=& -bC_t(\frac{(\delta+\nu_0)^2\kappa+ \kappa\nu_0^2 + \kappa^3}{(-(\delta+\nu_0)^2+\kappa^2+\nu_0^2)^2+4(\delta+\nu_0)^2\kappa^2)})\\
@@ -507,40 +507,38 @@ A_+^t =& A_+ + A_+^c.\\
 $I_0$ and $J_1$ are the modified Bessel Function of the first kind and
 the Bessel function of the first kind, respectively. They appear in
 the cooling and heating rates as a result of averaging out the time
-dependencies for the cavity eigenvalues in Appendix
-\ref{CoolingAppendix}.
+dependencies for the cavity eigenvalues (see Appendix
+\ref{CoolingAppendix}).
 With these expressions in hand, the temperature is easily calculated.
-Everything is calculated using $\frac{\delta}{\nu_0}$ as the variable.
 
 
 \begin{figure}[h!]
 \includegraphics[scale=.5]{TempGorden1-.pdf}   
-\caption{ Mechanical oscillator phonon number with and without a time dependence. The correction results in a lower minimum temperature, as well as a lower temperature in a region around this minimum.}\label{fig:TempComparisson-}
+\caption{ Mechanical oscillator phonon number of a parametrically
+  driven mechanical oscillator (dashed) compared with a non-driven one
+  (dotted). The parametrically driven oscillator shows a smaller
+  temperature. Parameters: $\kappa = 0.05\nu_0$,
+  $\frac{C_tJ_1(C_t)}{I_0(C_t)} = 0.05$}\label{fig:TempComparisson-}
 \end{figure}
 
-\begin{figure}[h!]
-\includegraphics[scale=.5]{TempGorden1+.pdf}   
-\caption{ Mechanical oscillator phonon number with and without a time dependence. The negative temperature is interpreted as heating of the resonator.}\label{fig:TempComparisson+}
-\end{figure}
-
-
-For figures \ref{fig:TempComparisson-} and \ref{fig:TempComparisson+},we used $\kappa = 0.05\nu_0$ and
-calculated $\expval{m}$ near the points $\frac{\delta}{\nu_0}=-1$ and $\frac{\delta}{\nu_0}=1$ respectively. The
-positive ratio corresponds to heating of the resonator
-and the negative part corresponds to cooling. We assume that the
-parameters are such that
-
+In figure \ref{fig:TempComparisson-} the temperature for the
+parametrically driven oscillator is compared with the non-driven case;
+the temperature is lower in the parametrically driven case. We used
+$\kappa = 0.05\nu_0$ and calculated $\expval{m}$ around the minimum in
+$\frac{\delta}{\nu_0}=-1$. We assume that the parameters are such that
 \begin{equation}
 \frac{C_tJ_1(C_t)}{I_0(C_t)} = 0.05,
 \end{equation}
 so that corrections proportional to higher orders in $C_t$ could be
 disregarded. As we can see in figure \ref{fig:TempRatio}, the
-corrected temperature is lower over a range around the minimum point.
+temperature for the parametrically driven oscillator is lower than the
+non-driven case over a range around the minimum point.  \fxnote*{Dada la relación de scattering es cierto pero de manera un poco trivial, ¿no? Como $\nu_0=n\omega$ la frecuencia secular no es libre y siempre se puede eliminar. Quité la frase e hice la lista de cosas asumidas. También re-escribí un poco la sección donde se pone la solución de $\alpha$ y $\beta$ para que fuera coherente con lo que pedimos.}{It is worth remembering the assumptions made to this point. In order to derive the cooling rates we have neglected terms of order $\epsilon^2$, $\frac{\epsilon}{n^3/2}$ and smaller and terms of order $\frac{\delta_t}{\delta^2}$ and smaller.}
 
 It must be noted that since terms of order $\frac{\delta_t}{\delta^2}$
 are neglected, the approximation does not hold as $\delta$ approaches
-0. The approximation is valid near $|\frac{\delta}{\nu_0}| = 1$ as long
-as $|\frac{\delta_t}{\nu_0}|,\frac{\delta_t}{\delta^2}\ll 1$.  The temperature behavior is the same around both minimums. In both cases the correction pushes the temperature closer to the limit case where the non-dominant sideband is zero, as can be seen from equation \eqref{eq:TempExpression}. 
+0. The approximation is valid near $|\frac{\delta}{\nu_0}| = 1$ as
+long as $|\frac{\delta_t}{\nu_0}|,\frac{\delta_t}{\delta^2}\ll 1$. 
+\eqref{eq:TempExpression}.
 
 \begin{figure}
 \includegraphics[scale=.5]{TempPropGorden1.pdf}
@@ -637,7 +635,9 @@ The left and right eigenstates are orthogonal under the product
 These states play an important part in the derivation of the master
 equation of the cavity state in the adiabatic approximation.
 
-In Appendix \ref{CoolingAppendix} we consider a harmonic oscillator with no damping, so the left and right eigenstates of the damping basis reduce to 
+In Appendix \ref{CoolingAppendix} we consider a harmonic oscillator
+with no damping, so the left and right eigenstates of the damping
+basis reduce to
 
 \begin{equation}
 \hat{\rho}_{n}^{l}=\Ket{n+l}\Bra{n}=\check{\rho}_{n}^{\dagger l},
@@ -769,9 +769,11 @@ P\dot{\rho}'(t)=P e^{-\mathcal{L}_0 t-\mathcal{L}_0^t(t)}\mathcal{L}_1[&\sum_{\l
 
 \begin{equation}
 \lambda_c = ij,
-\end{equation} with $i$ the imaginary unit and $j$ the cavity quantum number. If we then set $t_0=0$ and note that
-$\mathcal{L}_0^t(0)=0$, we may write \eqref{ProyectionEQ}, returning
-$P$ and $Q$ to their original notation, as
+\end{equation}
+with $i$ the imaginary unit and $j$ the cavity quantum number. If we
+then set $t_0=0$ and note that $\mathcal{L}_0^t(0)=0$, we may write
+\eqref{ProyectionEQ}, returning $P$ and $Q$ to their original
+notation, as
 
 \begin{align}
 P\dot{\rho}'(t)=&\sum_{\lambda,\lambda'}[P \mathcal{L}_1Q[...]\mathcal{L}_1P\rho(0)],\\
@@ -842,9 +844,26 @@ P_m[F_\Gamma,Q_m  \mu F_\Gamma] =& \abs{\gamma}^2((\Gamma\mu\Gamma^\dagger  - \m
 \begin{equation}
 <E(\lambda)> = \frac{2\pi}{\nu_0}\int_0^\frac{2\pi}{\nu_0}dt E(\lambda) 
 \end{equation}
+and equation \eqref{CoolingBeforecoefficients} can then be
+straightforwardly arranged in the form
+\begin{equation}\label{eq:LaserCoolingEqAppendixB}
+\dot{\mu} \approx \frac{1}{i\hbar}[\overline{H},\mu] + \frac{A_-}{2}D[\Gamma]\mu + \frac{A_+}{2}D[\Gamma^\dagger]\mu, 
+\end{equation}
+with
+$D[\Gamma] = 2\Gamma \mu \Gamma^\dagger -\{\Gamma^\dagger \Gamma,
+\mu\}$. When arranging in this form, the
+coefficients that are obtained are complex. The real part corresponds
+to the cooling and heating rates and the imaginary part corresponds to
+a negligible correction to the mechanical frequency $\nu_0$. The cooling coefficient, $A_-$ is given by
 
- and equation \eqref{CoolingBeforecoefficients} can then be straightforwardly arranged in the form \eqref{eq:ProyectedMasterEqCooling}. When arranging in this form, the coefficients that are obtained are complex. The real part corresponds to the cooling and heating rates and the imaginary part corresponds to a negligible correction to the mechanical frequency $\nu_0$.
+\begin{equation}
+A_- = - \frac{1}{2}\sum_{\lambda'}\hbar^2\chi_0^2 |\alpha_1|^2 |\gamma^2|(\delta_{l,1}\delta_{j,1}+\delta_{l,-1}\delta_{j,-1})\delta_{n,0}\expval{E(\lambda'}),
+\end{equation} where the Kroenecker deltas eliminate the sum ober $\lambda'$. The heating rate $A_+$ is quite similar and is given by
 
+\begin{equation}
+A_+ = - \frac{1}{2}\sum_{\lambda'}\hbar^2\chi_0^2 |\alpha_1|^2 |\gamma^2|(\delta_{l,1}\delta_{j,-1}+\delta_{l,-1}\delta_{j,1})\delta_{n,0}\expval{E(\lambda'}.
+\end{equation} This process neglects the mechanical damping as this process occurs on the longest timescale of all \cite{BarberisLC}. The $L_\Gamma$ term can simply be added to equation \eqref{eq:LaserCoolingEqAppendixB} after the cooling procedure is complete.
+\fxnote{Creo que así queda bastante claro}
 \bibliographystyle{unsrt}
 \bibliography{Bib}
 \end{document}
